--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -16,11 +16,8 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          creds: 
-            -${{ secrets.AZURE_CLIENT_ID }}
-            -${{ secrets.AZURE_CLIENT_SECRET }}
-            -${{ secrets.AZURE_SUBSCRIPTION_ID }}
-            -${{ secrets.AZURE_TENENT_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+            
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
