--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          auth-type: SERVICE PRINCIPAL
+          auth-type: CONTRIBUTOR
           creds: ${{ secrets.AZURE_CREDENTIALS }}
           
             
