--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -15,12 +15,12 @@ jobs:
 
       - name: Login to Azure
         uses: azure/login@v1
-        with:
-          auth-type: CONTRIBUTOR
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+        env:
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           
-            
-
+        
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
