--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Deploy to Azure App Service
       uses: azure/webapps-deploy@v3
       with:
-        app-name: my-app-service-name
+        app-name: github-appservice
         slot-name: production
         package: .
 
