--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -32,9 +32,12 @@ jobs:
 
     - name: Terraform Init
       run: terraform init
+      working-directory: environment
 
     - name: Terraform Plan
       run: terraform plan
+      working-directory: environment
 
     - name: Terraform Apply
       run: terraform apply -auto-approve
+      working-directory: environment 
