--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Terraform Import RG
       run: |
         terraform import azurerm_resource_group.rg 
-        /subscriptions/${{ secrets.SUBSCRIPTION_ID }}/resourceGroups/Git-rg
+        /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/Git-rg
 
 
     - name: Terraform Plan
