--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -38,7 +38,7 @@ jobs:
 
     - name: Terraform Import RG
       run: |
-        terraform import azurerm_resource_group.rg 
+        terraform import azurerm_resource_group.rg \
         /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/Git-rg
 
 
