--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -50,7 +50,7 @@ jobs:
 
     # Terraform Plan
     - name: Terraform Plan
-      run: terraform plan
+      run: terraform plan -lock=false
       working-directory: ./environment
       env:
         ARM_USE_OIDC: true
